--- a/Sir Ishaq/SASSSCSS  React Router  Fetch API/src/App.scss
+++ b/Sir Ishaq/SASSSCSS  React Router  Fetch API/src/App.scss
@@ -1,11 +1,41 @@
+$font-stack: Helvetica, sans-serif;
+$primary-color: #333;
+
+@mixin theme($theme: DarkGray) {
+  background: $theme;
+  box-shadow: 0 0 1px rgba($theme, .25);
+  color: #fff;
+}
+
 .App {
   text-align: center;
+  .first {
+    background-color: $primary-color;
+    color: #fff;
+  }
+  .second {
+    @include theme($theme: DarkRed);
+  }
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+.container {
+  background-color: #fff;
+  &:hover {
+    background-color: #000;
+  }
+  .child {
+    color: #fff;
+    .grand-child {
+      border: solid 1px;
+    }
+  }
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
